# astrolabe_smart_contract

./: .gitignore  ASTR-program-keypair.json  Anchor.toml  CLAUDE.md  Dockerfile  README.md  aSTro7GUuGqTSiDHJRVThxPYJejb5sEJr8k6EV5X64p.json  appspec.yml  astro_deployer.json  build-script.sh  build-with-docker.sh  calculate-pdas.js  check-program-config.ts  codama.json  create-smart-account-manual.js  decode-address.js  dev_deployer.json  docker-compose.yml  get-treasury.js  init-program-config.js  init-smart-account.ts  manual-init.js  notes.txt  package-lock.json  package.json  set-creation-fee-zero.js  set_program_authority.sh  simple-init.js  test_program_keypair.json
idl/: squads_smart_account_program.json
programs/astrolabe_smart_account/: Cargo.toml
programs/astrolabe_smart_account/src/: errors.rs  lib.rs
programs/astrolabe_smart_account/src/events/: account_events.rs  mod.rs
programs/astrolabe_smart_account/src/instructions/: authority_settings_transaction_execute.rs  authority_spending_limit_add.rs  authority_spending_limit_remove.rs  batch_add_transaction.rs  batch_create.rs  batch_execute_transaction.rs  mod.rs  program_config_change.rs  program_config_init.rs  proposal_create.rs  restricted_transaction_create.rs  settings_transaction_create.rs  settings_transaction_execute.rs  settings_transaction_sync.rs  smart_account_create.rs  transaction_buffer_close.rs  transaction_buffer_create.rs  transaction_close.rs  transaction_create.rs  transaction_create_from_buffer.rs  transaction_execute.rs  transaction_execute_sync.rs  use_spending_limit.rs
programs/astrolabe_smart_account/src/state/: batch.rs  mod.rs  program_config.rs  proposal.rs  seeds.rs  settings.rs  settings_transaction.rs  transaction.rs  transaction_buffer.rs
programs/astrolabe_smart_account/src/utils/: context_validation.rs  executable_transaction_message.rs  mod.rs  small_vec.rs  system.rs
scripts/: anchor_build.sh  cleanup_before_install.sh  deploy_upgrade.sh  fix_permissions.sh  git_pull_and_deploy.sh  local-sync-sdk.sh  prepare_fresh_surfpool.sh  start_surfpool_service.sh  stop_surfpool_service.sh  surfpool-debug.sh  surfpool-ensure.sh  surfpool-manage.sh  (+3 more)
sdk/clients/rust/: Cargo.toml
sdk/clients/rust/src/: lib.rs
smart-account-sdk/: Cargo.toml
smart-account-sdk/src/: lib.rs
(+113 files in other folders)
