[package]
name = "smart-account-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["allow-missing-optionals"] }
solana-sdk = "2.2.2"      
anchor-client = "0.31.1"
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.7"