[package]
name = "astrolabe-smart-account-program"
version = "0.1.0"
description = "Astrolabe Smart Account Program V0.1"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "astrolabe_smart_account"

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testing = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["allow-missing-optionals"] }
anchor-spl = { version="=0.31.1", features=["token"] }
solana-security-txt = "=1.1.1"