[package]
name = "astrolabe-smart-account-client"
version = "0.1.0"
edition = "2021"

# Empty workspace table to keep this crate independent from the parent workspace
[workspace]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18"
borsh = "0.10"

[lib]
name = "astrolabe_smart_account_client"
path = "src/lib.rs"
